@@ -1,6 +1,10 @@
 OBJECTS = http.o display.o download.o rtorrent.o
-CFLAGS = -Wall -O3 -g -I..
-LIBS = -L../torrent/.libs -ltorrent -lncurses -lcrypto
+
+LIBS_TMP = `pkg-config --libs sigc++-2.0`
+LIBS = -ltorrent -lncurses -lcrypto $(LIBS_TMP)
+
+CFLAGS_TMP = `pkg-config --cflags sigc++-2.0`
+CFLAGS = -Wall -O3 -g $(CFLAGS_TMP)
 
 all: $(OBJECTS)
 	g++ $(CFLAGS) -o rtorrent $(OBJECTS) $(LIBS)
